--- a/1-quickstart/105-aws-ocp/bom.yaml
+++ b/1-quickstart/105-aws-ocp/bom.yaml
@@ -38,11 +38,6 @@ spec:
             - 10.0.4.0/24
             - 10.0.5.0/24
             - 10.0.6.0/24
-        - name: availability_zones
-          value:
-            - ap-south-1a
-            - ap-south-1b
-            - ap-south-1c
     - name: aws-nat-gateway
       alias: ngw
       version: v1.1.1
@@ -69,11 +64,6 @@ spec:
             - 10.0.1.0/24
             - 10.0.2.0/24
             - 10.0.3.0/24
-        - name: availability_zones
-          value:
-            - ap-south-1a
-            - ap-south-1b
-            - ap-south-1c
     - name: aws-rosa
       alias: rosa-cluster
       version: v1.1.0
@@ -86,7 +76,7 @@ spec:
         - name: multi-zone-cluster
           value: true
         - name: no_of_compute_nodes
-          value: 3
+          value: 1
         - name: dry_run
           value: false
         - name: machine-cidr
@@ -121,6 +111,13 @@ spec:
       type: string
     - name: secret_key
       type: string
+    - name: availability_zones
+      type: list(string)
+      description: List of availability zone ids
+      defaultValue:
+        - ap-south-1a
+        - ap-south-1b
+        - ap-south-1c
     - name: ngw_connectivity_type
       type: string
       description: >-
