--- a/credentials.template
+++ b/credentials.template
@@ -2,8 +2,14 @@
 ## Don't include quotes around the value
 
 ## The API key for the AWS Cloud account where the infrastructure will be provisioned.
-TF_VAR_access_key=
-TF_VAR_secret_key=
+##AWS_ACCESS_KEY_ID=
+##AWS_SECRET_ACCESS_KEY=
+##TF_VAR_access_key=
+##TF_VAR_secret_key=
 ##This token will be used by AWS cloud during ROSA cluster provision
-TF_VAR_rosa_token=
+##TF_VAR_rosa_token=
+###AWS_ROSA_TOKEN=
+
+
+
 
