Ref Arch Diagram update
Signed-off-by: Cloud-Native Toolkit <cloudnativetoolkit@gmail.com>

--- a/credentials.template
+++ b/credentials.template
@@ -10,6 +10,8 @@
 ##TF_VAR_rosa_token=
 ###AWS_ROSA_TOKEN=
 
+## Provide a value for 'gitops_repo_token'
+#gitops_repo_token=""
 
-
-
+##Provide a value for 'cluster_login_token':
+#cluster_login_token=""
