--- a/1-quickstart/200-aws-openshift-gitops/bom.yaml
+++ b/1-quickstart/200-aws-openshift-gitops/bom.yaml
@@ -4,13 +4,12 @@ metadata:
   name: 200-aws-openshift-gitops
   labels:
     type: software
-    platform: aws
     code: '200'
   annotations:
-    displayName: AWS OpenShift GitOps Bootstrap
+    displayName: OpenShift GitOps Bootstrap
     description: >-
-      Provisions OpenShift GitOps into an existing AWS cluster and bootstraps it
-      to a gitops repository
+      Provisions OpenShift GitOps (ArgoCD) into an existing cluster and
+      bootstraps it to a gitops repository
 spec:
   modules:
     - name: gitops-repo
@@ -23,7 +22,7 @@ spec:
         - name: create_webhook
           value: true
     - name: gitops-cluster-config
-      alias: config
+      alias: gitops-cluster-config
       version: v1.0.0
     - name: gitops-console-link-job
       alias: gitops-console-link-job
@@ -39,19 +38,13 @@ spec:
       alias: cluster
       version: v1.3.1
     - name: olm
-      alias: olm
       version: v1.3.2
     - name: sealed-secret-cert
-      alias: sealed-secret-cert
       version: v1.0.1
   variables:
     - name: gitops_repo_host
       type: string
       description: The host for the git repository.
-      defaultValue: ''
-    - name: gitops_repo_type
-      type: string
-      description: The type of the hosted git repository (github or gitlab).
       defaultValue: ''
     - name: gitops_repo_org
       type: string
@@ -71,7 +64,7 @@ spec:
       description: >-
         The short name of the repository (i.e. the part after the org/group
         name)
-    - name: config_banner_text
+    - name: gitops-cluster-config_banner_text
       type: string
       description: The text that will appear in the top banner in the cluster
     - name: server_url
