added terragrunt, tested all 3 boms with terragrunt successfully
Signed-off-by: indirakalagara <kindira@gmail.com>

--- a/credentials.template
+++ b/credentials.template
@@ -9,9 +9,7 @@
 ##This token will be used by AWS cloud during ROSA cluster provision
 ##TF_VAR_rosa_token=
 
-
 ## Provide a value for 'gitops_repo_token'
-#gitops_repo_token=""
-
-##Provide a value for 'cluster_login_token':
-#cluster_login_token=""
+#TF_VAR_gitops_repo_username=
+#TF_VAR_gitops_repo_token=
+#TF_VAR_gitops_repo_org=
