--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -24,7 +24,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       #image: quay.io/cloudnativetoolkit/terraform:v1.1
-      image: quay.io/cloudnativetoolkit/terraform:v1.0.0-v1.1
+      #image: quay.io/cloudnativetoolkit/terraform:v1.0.0-v1.1
+      image: quay.io/cloudnativetoolkit/cli-tools:v1.1
       options: --privileged
 
     strategy:
@@ -61,10 +62,13 @@ jobs:
           RANDOM_PREFIX=$(cat /dev/urandom | tr -dc '[:alpha:]' | tr '[:upper:]' '[:lower:]' | fold -w ${1:-5} | head -n 1)
           FLAVOR_CHAR=$(echo "${{ matrix.flavor }}" | fold -w ${1:-1} | head -n 1)
           STORAGE_CHAR=$(echo "${{ matrix.storage }}" | fold -w ${1:-1} | head -n 1)
+          echo "RANDOM_PREFIX : ${RANDOM_PREFIX "
+          
           ./setup-workspace.sh -f ${{ matrix.flavor }} -s ${{ matrix.storage }} -n "${FLAVOR_CHAR}${STORAGE_CHAR}-${RANDOM_PREFIX}" -r ap-south-1
           cd ../workspaces/current
           
           echo ""
+
           echo "*** Start terraform.tfvars ***"
           cat terraform.tfvars
           echo "*** End terraform.tfvars ***"
