--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -23,8 +23,8 @@ jobs:
   verify:
     runs-on: ubuntu-latest
     container:
-      image: quay.io/cloudnativetoolkit/terraform:v1.1
-      #image: quay.io/cloudnativetoolkit/terraform:v1.0.0-v1.1
+      #image: quay.io/cloudnativetoolkit/terraform:v1.1
+      image: quay.io/cloudnativetoolkit/terraform:v1.0.0-v1.1
       #image: quay.io/cloudnativetoolkit/cli-tools:v1.1
       options: --privileged
 
