updated verify yaml with container permission
Signed-off-by: indirakalagara <kindira@gmail.com>

--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -23,10 +23,10 @@ jobs:
   verify:
     runs-on: ubuntu-latest
     container:
-      image: quay.io/cloudnativetoolkit/terraform:v1.1
+      #image: quay.io/cloudnativetoolkit/terraform:v1.1
       #image: quay.io/cloudnativetoolkit/terraform:v1.0.0-v1.1
-      #image: quay.io/cloudnativetoolkit/cli-tools:v1.1
-      options: --privileged
+      image: quay.io/cloudnativetoolkit/cli-tools:v1.1
+      options: --privileged --user root
 
     strategy:
       matrix:
