--- a/2-standard/110-aws-std-edge-vpc/bom.yaml
+++ b/2-standard/110-aws-std-edge-vpc/bom.yaml
@@ -12,7 +12,7 @@ spec:
           value: 10.0.0.0/16
     - name: aws-client-vpn
       alias: edge-vpn
-      version: v1.1.1
+      version: v1.2.1
       dependencies:
         - name: aws-vpc-subnets
           ref: edge_bastion_pri_subnets
@@ -42,7 +42,7 @@ spec:
         - name: ami_id
           value: ami-08df646e18b182346
     - name: aws-internet-gateway
-      alias: edge-igw
+      alias: igw
       version: v1.2.1
     - name: aws-kms
       alias: storage_kms
@@ -51,11 +51,11 @@ spec:
         - name: user_arn
           important: true
     - name: aws-nat-gateway
-      alias: edge-nat
+      alias: edge-ngw
       version: v1.1.1
       dependencies:
         - name: aws-vpc-subnets
-          ref: edge_bastion_pri_subnets
+          ref: edge_bastion_pub_subnets
       variables:
         - name: connectivity_type
           value: public
@@ -83,7 +83,7 @@ spec:
       version: v2.3.0
       dependencies:
         - name: gateways
-          ref: edge-nat
+          ref: edge-ngw
       variables:
         - name: label
           value: private
@@ -118,7 +118,7 @@ spec:
       type: string
     - name: edge-vpn_allowed_cidr_ranges
       type: list(string)
-      description: List of CIDR ranges from which access is allowed
+      description: List of CIDR ranges from which access is allowed.
       defaultValue: *ref_0
     - name: edge-vpn_client_cidr_block
       type: string
@@ -144,7 +144,7 @@ spec:
     - name: storage_kms_user_arn
       type: string
       defaultValue: arn:aws:iam::005990573564:root
-    - name: edge-nat_connectivity_type
+    - name: edge-ngw_connectivity_type
       type: string
       description: >-
         (Optional) Connectivity type for the gateway. Valid values are private
