--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -33,9 +33,10 @@ jobs:
         flavor:
           # - quickstart
           - standard          
-        # storage:
-        #   - portworx
+        storage:
+        #  - portworx
         #   - odf
+          - none
         region:
           - ap-south-1
       fail-fast: false
@@ -61,12 +62,12 @@ jobs:
 
       - name: Terraform Apply - ${{ matrix.flavor }},${{ matrix.storage }}
         run: |
-          RANDOM_PREFIX=$(cat /dev/urandom | tr -dc '[:alpha:]' | tr '[:upper:]' '[:lower:]' | fold -w ${1:-5} | head -n 1)
+          RANDOM_PREFIX=$(cat /dev/urandom | tr -dc '[:alpha:]' | tr '[:upper:]' '[:lower:]' | fold -w ${1:-3} | head -n 1)
           FLAVOR_CHAR=$(echo "${{ matrix.flavor }}" | fold -w ${1:-1} | head -n 1)
           STORAGE_CHAR=$(echo "${{ matrix.storage }}" | fold -w ${1:-1} | head -n 1)
-          echo "RANDOM_PREFIX : ${RANDOM_PREFIX} "
+          echo "RANDOM_PREFIX : ${RANDOM_PREFIX} "          
           
-          ./setup-workspace.sh -f ${{ matrix.flavor }} -s ${{ matrix.storage }} -n "${FLAVOR_CHAR}${STORAGE_CHAR}-${RANDOM_PREFIX}" -r ${{ matrix.region }}
+          ./setup-workspace.sh -f ${{ matrix.flavor }} -s none -n ${FLAVOR_CHAR}${STORAGE_CHAR}-${RANDOM_PREFIX} -r ${{ matrix.region }}
           cd ../workspaces/current
           
           echo ""
