--- a/2-standard/110-aws-std-openshift-vpc/bom.yaml
+++ b/2-standard/110-aws-std-openshift-vpc/bom.yaml
@@ -52,7 +52,7 @@ spec:
             - 10.0.6.0/24
     - name: aws-client-vpn
       alias: vpn
-      version: v1.1.1
+      version: v1.2.1
       dependencies:
         - name: aws-vpc-subnets
           ref: worker_subnets
@@ -135,7 +135,7 @@ spec:
       defaultValue: true
     - name: vpn_allowed_cidr_ranges
       type: list(string)
-      description: List of CIDR ranges from which access is allowed
+      description: List of CIDR ranges from which access is allowed.
       defaultValue: *ref_0
     - name: vpn_client_cidr_block
       type: string
