--- a/credentials.template
+++ b/credentials.template
@@ -13,3 +13,6 @@
 #TF_VAR_gitops_repo_username=
 #TF_VAR_gitops_repo_token=
 #TF_VAR_gitops_repo_org=
+
+##base64 encoding of the portworx spec file
+#TF_VAR_portworx_spec=
