--- a/.github/workflows/verify-pr.yaml
+++ b/.github/workflows/verify-pr.yaml
@@ -16,4 +16,5 @@ jobs:
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       AWS_ROSA_TOKEN: ${{ secrets.AWS_ROSA_TOKEN }}
       GITOPS_USERNAME: ${{ secrets.GITOPS_USERNAME }}
-      GITOPS_TOKEN: ${{ secrets.GITOPS_TOKEN }}      
+      GITOPS_TOKEN: ${{ secrets.GITOPS_TOKEN }}     
+      PORTWORX_SPEC: ${{ secrets.PORTWORX_SPEC }}   
