--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -18,6 +18,8 @@ on:
         required: true
       GITOPS_TOKEN:
         required: true
+      PORTWORX_SPEC:
+        required: true        
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   verify:
@@ -50,7 +52,8 @@ jobs:
       TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TF_VAR_rosa_token: ${{ secrets.AWS_ROSA_TOKEN }}
       TF_VAR_gitops_repo_username: ${{ secrets.GITOPS_USERNAME }}
-      TF_VAR_gitops_repo_token: ${{ secrets.GITOPS_TOKEN }}      
+      TF_VAR_gitops_repo_token: ${{ secrets.GITOPS_TOKEN }}    
+      TF_VAR_portworx_spec: ${{ secrets.PORTWORX_SPEC }}  
 
     outputs:
       status: ${{ job.status }}
