--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -61,17 +61,19 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
+        with:
+          path: main        
 
       - name: Terraform Apply - ${{ matrix.flavor }},${{ matrix.storage }}
         run: |
           RANDOM_PREFIX=$(cat /dev/urandom | tr -dc '[:alpha:]' | tr '[:upper:]' '[:lower:]' | fold -w ${1:-2} | head -n 1)
           FLAVOR_CHAR=$(echo "${{ matrix.flavor }}" | fold -w ${1:-1} | head -n 1)
           STORAGE_CHAR=$(echo "${{ matrix.storage }}" | fold -w ${1:-1} | head -n 1)
-          echo "RANDOM_PREFIX : ${RANDOM_PREFIX} "   
-
-          ./setup-workspace.sh -f ${{ matrix.flavor }} -s ${{ matrix.storage }} -n ${RANDOM_PREFIX} -r ${{ matrix.region }}
+          echo "RANDOM_PREFIX : ${RANDOM_PREFIX}"          
           
+          cd main
+          ./setup-workspace.sh -f ${{ matrix.flavor }} -s ${{ matrix.storage }} -n "${RANDOM_PREFIX}" -r "${{ matrix.region }}"  || exit 1
           cd ../workspaces/current
           
           echo ""
