--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -71,7 +71,7 @@ jobs:
           echo "RANDOM_PREFIX : ${RANDOM_PREFIX}"          
           
 
-          ./setup-workspace.sh -f ${{ matrix.flavor }} -s ${{ matrix.storage }} -n "${RANDOM_PREFIX}" -r "${{ matrix.region }}" 
+          ./setup-workspace.sh -f ${{ matrix.flavor }} -s ${{ matrix.storage }} -n "${RANDOM_PREFIX}" -r ${{ matrix.region }}
           cd ../workspaces/current
           
           echo ""
