--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -54,6 +54,7 @@ jobs:
       TF_VAR_gitops_repo_username: ${{ secrets.GITOPS_USERNAME }}
       TF_VAR_gitops_repo_token: ${{ secrets.GITOPS_TOKEN }}    
       TF_VAR_portworx_spec: ${{ secrets.PORTWORX_SPEC }}  
+      GIT_DISCOVERY_ACROSS_FILESYSTEM: 1      
 
     outputs:
       status: ${{ job.status }}
@@ -69,22 +70,24 @@ jobs:
           FLAVOR_CHAR=$(echo "${{ matrix.flavor }}" | fold -w ${1:-1} | head -n 1)
           STORAGE_CHAR=$(echo "${{ matrix.storage }}" | fold -w ${1:-1} | head -n 1)
           echo "RANDOM_PREFIX : ${RANDOM_PREFIX}"          
-          
-
+                   
           ./setup-workspace.sh -f ${{ matrix.flavor }} -s ${{ matrix.storage }} -n "${RANDOM_PREFIX}" -r ${{ matrix.region }}
           cd ../workspaces/current
           
           echo ""
 
           echo "*** Start terraform.tfvars ***"
-          cat terraform.tfvars
+          cat cluster.tfvars
           echo "*** End terraform.tfvars ***"
           echo ""
           
-          ./apply-all.sh
+          # ./apply-all.sh
+          ./apply-all.sh -a          
 
       - name: Terraform Destroy - ${{ matrix.flavor }},${{ matrix.storage }}
         if: ${{ always() }}
         run: |
-          cd ../workspaces/current
-          ./destroy-all.sh
+          echo "${PWD}"
+          ls -l
+          cd ./workspaces/current
+          ./destroy-all.sh -a
