updated workflow yaml for destroy
Signed-off-by: indirakalagara <kindira@gmail.com>

--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -89,5 +89,5 @@ jobs:
         run: |
           echo "${PWD}"
           ls -l
-          cd ./workspaces/current
+          cd ../workspaces/current
           ./destroy-all.sh -a
