--- a/1-quickstart/layers.yaml
+++ b/1-quickstart/layers.yaml
@@ -1,8 +1,26 @@
-names_105:
-  - "105-aws-vpc-openshift"
-mock_105: "105-mock"
-names_200: "200-openshift-gitops"
-mock_200: "mock"
-names_210:
-  - "210-aws-portworx-storage"  
-names_220: "220-dev-tools"
+# names_105:
+#   - "105-aws-vpc-openshift"
+# mock_105: "105-mock"
+# names_200: "200-openshift-gitops"
+# mock_200: "mock"
+# names_210:
+#   - "210-aws-portworx-storage"  
+# names_220: "220-dev-tools"
+cluster:
+  names:
+    - 105-aws-vpc-openshift
+    - 105-azure-ocp-ipi
+    - 105-ibm-vpc-openshift
+    - 105-existing-openshift
+  mock: mock
+"200":
+  names:
+    - 200-openshift-gitops
+  mock: mock
+"210":
+  names:
+    - 210-aws-portworx-storage
+    - 210-azure-portworx-storage
+    - 210-ibm-odf-storage
+    - 210-ibm-portworx-storage
+  mock: mock
