updated apply-sh in gitactions
Signed-off-by: indirakalagara <kindira@gmail.com>

--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -80,9 +80,8 @@ jobs:
           cat cluster.tfvars
           echo "*** End terraform.tfvars ***"
           echo ""
-          
-          # ./apply-all.sh
-          ./apply-all.sh -a          
+
+          ./apply.sh -a
 
       - name: Terraform Destroy - ${{ matrix.flavor }},${{ matrix.storage }}
         if: ${{ always() }}
@@ -90,4 +89,4 @@ jobs:
           echo "${PWD}"
           ls -l
           cd ../workspaces/current
-          ./destroy-all.sh -a
+          ./destroy.sh -a
