--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -51,8 +51,8 @@ jobs:
       TF_VAR_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
       TF_VAR_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       TF_VAR_rosa_token: ${{ secrets.AWS_ROSA_TOKEN }}
-      TF_VAR_gitops_repo_username: ${{ secrets.GITOPS_USERNAME }}
-      TF_VAR_gitops_repo_token: ${{ secrets.GITOPS_TOKEN }}    
+      # TF_VAR_gitops_repo_username: ${{ secrets.GITOPS_USERNAME }}
+      # TF_VAR_gitops_repo_token: ${{ secrets.GITOPS_TOKEN }}    
       TF_VAR_portworx_spec: ${{ secrets.PORTWORX_SPEC }}  
       GIT_DISCOVERY_ACROSS_FILESYSTEM: 1      
 
