--- a/credentials.template
+++ b/credentials.template
@@ -38,3 +38,6 @@
 ##base64 encoding of the portworx spec file
 ##export TF_VAR_portworx_spec=
 
+##Provide IAM user arn
+##export TF_VAR_user_arn=
+
