Standard arc workflow update
Signed-off-by: SivasailamV <sivasailamv@SivasailamVs-MacBook-Pro.local>

--- a/2-standard/110-aws-std-openshift-vpc/bom.yaml
+++ b/2-standard/110-aws-std-openshift-vpc/bom.yaml
@@ -7,9 +7,6 @@ spec:
     - name: aws-kms
       alias: storage_kms
       version: v1.1.1
-      variables:
-        - name: user_arn
-          important: true
     - name: aws-ssh-key
       alias: bastion_access_key
       version: v1.1.2
@@ -118,10 +115,7 @@ spec:
     - name: name_prefix
       type: string
       description: Prefix to be added to the names of resources which are being provisioned
-      defaultValue: ''
-    - name: storage_kms_user_arn
-      type: string
-      defaultValue: arn:aws:iam::005990573564:root
+      defaultValue: sw-bom9
     - name: region
       type: string
       defaultValue: ap-south-1
