--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -33,8 +33,8 @@ jobs:
     strategy:
       matrix:
         flavor:
-          - quickstart
-          #- standard          
+          #- quickstart
+          - standard          
         storage:
           - portworx
         #   - odf
