update standard arc
Signed-off-by: Indira <indira@ip-192-168-1-31.ap-southeast-2.compute.internal>

--- a/2-standard/210-aws-portworx-storage/bom.yaml
+++ b/2-standard/210-aws-portworx-storage/bom.yaml
@@ -10,6 +10,7 @@ metadata:
   annotations:
     displayName: AWS - Portworx Cluster Storage
     description: Installs Portworx in and OCP cluster on AWS
+    vpn/required: 'true'     
 spec:
   modules:
     - name: aws-portworx
