--- a/1-quickstart/layers.yaml
+++ b/1-quickstart/layers.yaml
@@ -1,11 +1,3 @@
-# names_105:
-#   - "105-aws-vpc-openshift"
-# mock_105: "105-mock"
-# names_200: "200-openshift-gitops"
-# mock_200: "mock"
-# names_210:
-#   - "210-aws-portworx-storage"  
-# names_220: "220-dev-tools"
 cluster:
   names:
     - 105-aws-vpc-openshift
@@ -23,4 +15,8 @@ cluster:
     - 210-azure-portworx-storage
     - 210-ibm-odf-storage
     - 210-ibm-portworx-storage
+  mock: mock
+"220":
+  names:
+    - 220-dev-tools
   mock: mock
