updated region in gitactions
Signed-off-by: Indira <indira@Indiras-MacBook-Pro.local>

--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -37,7 +37,7 @@ jobs:
           - portworx
           #  - none
         region:
-          - ap-south-1
+          - ap-southeast-2
       fail-fast: false
 
     env:
