--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -37,7 +37,7 @@ jobs:
           - portworx
           #  - none
         region:
-          - ap-southeast-2
+          - ap-south-1
       fail-fast: false
 
     env:
