fixed 46 49-53 including rosa update
Signed-off-by: Indira <indira@Indiras-MacBook-Pro.local>

--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -31,10 +31,10 @@ jobs:
     strategy:
       matrix:
         flavor:
-          #- quickstart
-          - standard          
+          - quickstart
+          #- standard          
         storage:
-          - portworx
+          #- portworx
           #  - none
         region:
           - ap-southeast-2
