updated verify workflow
Signed-off-by: Indira <indira@Indiras-MacBook-Pro.local>

--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -34,7 +34,7 @@ jobs:
           - quickstart
           #- standard          
         storage:
-          #- portworx
+          - portworx
           #  - none
         region:
           - ap-southeast-2
