updated workflow to run standard
Signed-off-by: Indira <indira@Indiras-MacBook-Pro.local>

--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -31,8 +31,8 @@ jobs:
     strategy:
       matrix:
         flavor:
-          - quickstart
-          #- standard          
+          #- quickstart
+          - standard          
         storage:
           - portworx
           #  - none
